--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   barcode_scan: 1.0.0
   qr_flutter: ^1.1.1
   image_gallery_saver: ^1.1.0
-
+  permission_handler: ^3.0.0
 
 dev_dependencies:
   flutter_test:
